Added main.js to write list of for loop items into dom

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Lightning Excercise</h1>
     <p>Check the console</p>
-    <script src="main.js"></script>
+    <ul id="printHere">
+    
+    </ul>   
+ <script src="main.js"></script>
 </body>
 </html>
